--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-playwright>=1.40.0
-beautifulsoup4>=4.12.2
-requests>=2.31.0
-
-# Optional dev tools
-# pytest>=7.0.0
+requests
+beautifulsoup4
+selenium
+pandas
+undetected-chromedriver
